name:                CallGraph
version:             0.1
build-type:          Simple
cabal-version:       >=1.10

executable CallGraph
  main-is:             CallGraph.hs
  build-depends:       base <4.11,
                       hashable,
                       protolude == 0.2.1,
                       text,
                       unordered-containers
  default-language:    Haskell2010
